--- a/templates/apigateway/etc/org.ops4j.pax.logging.cfg
+++ b/templates/apigateway/etc/org.ops4j.pax.logging.cfg
@@ -1,3 +1,22 @@
+################################################################################
+#
+#    Licensed to the Apache Software Foundation (ASF) under one or more
+#    contributor license agreements.  See the NOTICE file distributed with
+#    this work for additional information regarding copyright ownership.
+#    The ASF licenses this file to You under the Apache License, Version 2.0
+#    (the "License"); you may not use this file except in compliance with
+#    the License.  You may obtain a copy of the License at
+#
+#       http://www.apache.org/licenses/LICENSE-2.0
+#
+#    Unless required by applicable law or agreed to in writing, software
+#    distributed under the License is distributed on an "AS IS" BASIS,
+#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#    See the License for the specific language governing permissions and
+#    limitations under the License.
+#
+################################################################################
+
 # Colors for log level rendering
 color.fatal = bright red
 color.error = bright red
@@ -21,13 +40,13 @@ log4j2.rootLogger.appenderRef.PaxOsgi.ref = PaxOsgi
 log4j2.rootLogger.appenderRef.Console.ref = Console
 log4j2.rootLogger.appenderRef.Console.filter.threshold.type = ThresholdFilter
 log4j2.rootLogger.appenderRef.Console.filter.threshold.level = ${karaf.log.console:-OFF}
-log4j2.rootLogger.appenderRef.Camel.ref = Routing
+#log4j2.rootLogger.appenderRef.Sift.ref = Routing
 
 # Loggers configuration
 
 # SSHD logger
 log4j2.logger.sshd.name = org.apache.sshd
-log4j2.logger.sshd.level = ERROR
+log4j2.logger.sshd.level = INFO
 
 # Spifly logger
 log4j2.logger.spifly.name = org.apache.aries.spifly
@@ -87,18 +106,18 @@ log4j2.appender.osgi.filter = *
 #log4j2.logger.maven.level = TRACE
 
 # Sift - MDC routing
-log4j2.appender.camel.type = Routing
-log4j2.appender.camel.name = Routing
-log4j2.appender.camel.routes.type = Routes
-log4j2.appender.camel.routes.pattern = \$\$\\\{ctx:camel.routeId\}
-log4j2.appender.camel.routes.bundle.type = Route
-log4j2.appender.camel.routes.bundle.appender.type = RollingRandomAccessFile
-log4j2.appender.camel.routes.bundle.appender.name = camel-\$\\\{ctx:camel.routeId\}
-log4j2.appender.camel.routes.bundle.appender.fileName = ${karaf.log}/camel-\$\\\{ctx:camel.routeId\}.log
-log4j2.appender.camel.routes.bundle.appender.filePattern = ${karaf.log}/camel-\$\\\{ctx:camel.routeId\}.log.%i
-log4j2.appender.camel.routes.bundle.appender.append = true
-log4j2.appender.camel.routes.bundle.appender.layout.type = PatternLayout
-log4j2.appender.camel.routes.bundle.appender.layout.pattern = ${log4j2.pattern}
-log4j2.appender.camel.routes.bundle.appender.policies.type = Policies
-log4j2.appender.camel.routes.bundle.appender.policies.size.type = SizeBasedTriggeringPolicy
-log4j2.appender.camel.routes.bundle.appender.policies.size.size = 20MB
+#log4j2.appender.routing.type = Routing
+#log4j2.appender.routing.name = Routing
+#log4j2.appender.routing.routes.type = Routes
+#log4j2.appender.routing.routes.pattern = \$\$\\\{ctx:bundle.name\}
+#log4j2.appender.routing.routes.bundle.type = Route
+#log4j2.appender.routing.routes.bundle.appender.type = RollingRandomAccessFile
+#log4j2.appender.routing.routes.bundle.appender.name = Bundle-\$\\\{ctx:bundle.name\}
+#log4j2.appender.routing.routes.bundle.appender.fileName = ${karaf.log}/bundle-\$\\\{ctx:bundle.name\}.log
+#log4j2.appender.routing.routes.bundle.appender.filePattern = ${karaf.log}/bundle-\$\\\{ctx:bundle.name\}.log.%i
+#log4j2.appender.routing.routes.bundle.appender.append = true
+#log4j2.appender.routing.routes.bundle.appender.layout.type = PatternLayout
+#log4j2.appender.routing.routes.bundle.appender.layout.pattern = ${log4j2.pattern}
+#log4j2.appender.routing.routes.bundle.appender.policies.type = Policies
+#log4j2.appender.routing.routes.bundle.appender.policies.size.type = SizeBasedTriggeringPolicy
+#log4j2.appender.routing.routes.bundle.appender.policies.size.size = 8MB
