--- a/templates/apigateway/etc/org.apache.karaf.features.cfg
+++ b/templates/apigateway/etc/org.apache.karaf.features.cfg
@@ -22,72 +22,75 @@
 #
 featuresRepositories = \
     mvn:org.apache.karaf.features/framework/4.2.8/xml/features, \
-    mvn:org.apache.karaf.features/spring/4.2.8/xml/features, \
-    mvn:org.apache.camel.karaf/apache-camel/2.25.0/xml/features, \
+    mvn:org.apache.camel.karaf/apache-camel/2.25.1/xml/features, \
+    mvn:org.apache.activemq/activemq-karaf/5.15.12/xml/features, \
     mvn:org.apache.karaf.features/enterprise/4.2.8/xml/features, \
     mvn:io.hawt/hawtio-karaf/2.9.0/xml/features, \
     mvn:org.apache.karaf.features/standard/4.2.8/xml/features, \
-    mvn:org.apache.activemq/activemq-karaf/5.15.9/xml/features
+    mvn:org.apache.karaf.features/spring-legacy/4.2.8/xml/features
 
 #
 # Comma separated list of features to install at startup
 #
 featuresBoot = \
     (wrap), \
-    camel-zipfile/2.25.0, \
+    camel-zipfile/2.25.1, \
     instance/4.2.8, \
-    camel-json-validator/2.25.0, \
-    camel-sql/2.25.0, \
-    camel-websocket/2.25.0, \
+    camel-json-validator/2.25.1, \
+    camel-sql/2.25.1, \
+    camel-websocket/2.25.1, \
     ssh/4.2.8, \
+    pax-jdbc-pool-dbcp2/1.4.4, \
+    pax-jdbc-jtds/1.4.4, \
     aries-blueprint/4.2.8, \
-    camel-swagger-java/2.25.0, \
-    camel-velocity/2.25.0, \
-    activemq-camel/5.15.9, \
-    camel/2.25.0, \
+    camel-swagger-java/2.25.1, \
+    camel-velocity/2.25.1, \
+    activemq-camel/5.15.12, \
+    camel/2.25.1, \
     jaas/4.2.8, \
-    camel-base64/2.25.0, \
+    camel-base64/2.25.1, \
     diagnostic/4.2.8, \
-    camel-quartz/2.25.0, \
+    camel-quartz/2.25.1, \
     package/4.2.8, \
-    camel-elasticsearch/2.25.0, \
-    camel-core/2.25.0, \
-    camel-jetty/2.25.0, \
-    activemq-blueprint/5.15.9, \
+    pax-jdbc-config/1.4.4, \
+    camel-elasticsearch/2.25.1, \
+    camel-core/2.25.1, \
+    camel-jetty/2.25.1, \
+    activemq-blueprint/5.15.12, \
     system/4.2.8, \
-    camel-jdbc/2.25.0, \
+    camel-jdbc/2.25.1, \
     eventadmin/4.2.8, \
-    activemq-web-console/5.15.9, \
+    activemq-web-console/5.15.12, \
     shell/4.2.8, \
-    camel-script-groovy/2.25.0, \
-    camel-spring/2.25.0, \
-    camel-exec/2.25.0, \
+    camel-script-groovy/2.25.1, \
+    camel-spring/2.25.1, \
+    camel-exec/2.25.1, \
     hawtio/2.9.0, \
+    activemq-broker-noweb/5.15.12, \
     log/4.2.8, \
-    camel-jolt/2.25.0, \
-    camel-jms/2.25.0, \
+    camel-jolt/2.25.1, \
+    camel-jms/2.25.1, \
     jdbc/4.2.8, \
-    camel-crypto-cms/2.25.0, \
-    camel-ognl/2.25.0, \
-    camel-http4/2.25.0, \
-    camel-groovy/2.25.0, \
+    camel-crypto-cms/2.25.1, \
+    camel-ognl/2.25.1, \
+    camel-http4/2.25.1, \
+    camel-groovy/2.25.1, \
     feature/4.2.8, \
     deployer/4.2.8, \
-    camel-ldap/2.25.0, \
+    camel-ldap/2.25.1, \
     bundle/4.2.8, \
     kar/4.2.8, \
-    camel-csv/2.25.0, \
-    camel-saxon/2.25.0, \
-    activemq-broker/5.15.9, \
+    camel-csv/2.25.1, \
+    camel-saxon/2.25.1, \
     pax-jdbc-postgresql/1.4.4, \
-    camel-jsonpath/2.25.0, \
-    camel-mail/2.25.0, \
+    camel-jsonpath/2.25.1, \
+    camel-mail/2.25.1, \
     framework/4.2.8, \
-    camel-jackson/2.25.0, \
+    camel-jackson/2.25.1, \
     management/4.2.8, \
     service/4.2.8, \
-    camel-blueprint/2.25.0, \
-    camel-ftp/2.25.0, \
+    camel-blueprint/2.25.1, \
+    camel-ftp/2.25.1, \
     shell-compat/4.2.8, \
     config/4.2.8, \
     obr/4.2.8, \
