--- a/templates/apigateway/etc/profile.cfg
+++ b/templates/apigateway/etc/profile.cfg
@@ -11,10 +11,10 @@ attribute.overlay = true
 # Feature XML repositories
 repository.mvn\:org.apache.karaf.features/standard/4.2.8/xml/features = mvn:org.apache.karaf.features/standard/4.2.8/xml/features
 repository.mvn\:org.apache.karaf.features/framework/4.2.8/xml/features = mvn:org.apache.karaf.features/framework/4.2.8/xml/features
-repository.mvn\:org.apache.camel.karaf/apache-camel/2.25.0/xml/features = mvn:org.apache.camel.karaf/apache-camel/2.25.0/xml/features
-repository.mvn\:org.apache.activemq/activemq-karaf/5.15.9/xml/features = mvn:org.apache.activemq/activemq-karaf/5.15.9/xml/features
+repository.mvn\:org.apache.camel.karaf/apache-camel/2.25.1/xml/features = mvn:org.apache.camel.karaf/apache-camel/2.25.1/xml/features
+repository.mvn\:org.apache.activemq/activemq-karaf/5.15.12/xml/features = mvn:org.apache.activemq/activemq-karaf/5.15.12/xml/features
 repository.mvn\:io.hawt/hawtio-karaf/2.9.0/xml/features = mvn:io.hawt/hawtio-karaf/2.9.0/xml/features
-repository.mvn\:org.apache.karaf.features/spring/4.2.8/xml/features = mvn:org.apache.karaf.features/spring/4.2.8/xml/features
+repository.mvn\:org.apache.karaf.features/spring-legacy/4.2.8/xml/features = mvn:org.apache.karaf.features/spring-legacy/4.2.8/xml/features
 repository.mvn\:org.apache.karaf.features/enterprise/4.2.8/xml/features = mvn:org.apache.karaf.features/enterprise/4.2.8/xml/features
 
 # Features
@@ -73,11 +73,14 @@ feature.camel-ognl = camel-ognl
 feature.camel-script-groovy = camel-script-groovy
 feature.camel-jolt = camel-jolt
 feature.activemq-camel = activemq-camel
-feature.activemq-broker = activemq-broker
+feature.activemq-broker-noweb = activemq-broker-noweb
 feature.activemq-web-console = activemq-web-console
 feature.activemq-blueprint = activemq-blueprint
 feature.hawtio = hawtio
 feature.decanter-collector-log = decanter-collector-log
 feature.decanter-collector-jmx-camel = decanter-collector-jmx-camel
 feature.decanter-appender-elasticsearch = decanter-appender-elasticsearch
+feature.pax-jdbc-config = pax-jdbc-config
+feature.pax-jdbc-pool-dbcp2 = pax-jdbc-pool-dbcp2
 feature.pax-jdbc-postgresql = pax-jdbc-postgresql
+feature.pax-jdbc-jtds = pax-jdbc-jtds
